--- a/index.html
+++ b/index.html
@@ -9,21 +9,30 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/af727ae960.js" crossorigin="anonymous"></script>
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
 </head>
   <body>
     <div id="grilla">
       <header class="border">
         <div class="navbar">
-          <a class="logo" href="index.html"><img src="img/logo-1422723955-1631825534-b61290eb4e0cdf1d42cd790958d2d9e31631825534-480-0.webp" alt="logo"></a>
-          <nav class="navini">
-                  <a target="_blank" href="./index.html">INICIO</a>
-                  <a target="_blank" href="./pages/marca.html">MARCA</a>
-                  <a target="_blank" href="./pages/productos.html">PRODUCTOS</a>
-                  <a target="_blank" href="./pages/pf.html">PREGUNTAS FRECUENTES</a>
-                  <a target="_blank" href="./pages/contacto.html">CONTACTO</a>
-          </nav>
+          <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="navini">
+              <a class="logo" href="#"><img src="./img/logo-1422723955-1631825534-b61290eb4e0cdf1d42cd790958d2d9e31631825534-480-0.webp" alt="logo"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                  <a class="nav-link" href="./pages/marca.html">Marca</a>
+                  <a class="nav-link" href="./pages/productos.html">Productos</a>
+                  <a class="nav-link" href="./pages/pf.html">Preguntas Frecuentes</a>
+                  <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                </div>
+              </div>
+            </div>
+          </nav>         
         </div>
       </header>
         <section id="slide" class="border">
@@ -35,11 +44,6 @@
            </div>
         </section>
         <section id="prods" class="border">
-          <div class="maqsini-text">
-            <a target="_blank" href="./pages/productos.html#clippers"><h3>CLIPPERS</h3></a> 
-            <a target="_blank" href="./pages/productos.html#patilleras"><h3>TRIMMERS</h3> </a>
-            <a target="_blank" href=".pages/productos.html#shavers"><h3>SHAVERS</h3></a>
-           </div>
         <div class="maqsini-img"> 
           <a target="_blank" href="./pages/productos.html#clippers"> <img src="img/california-01-01-d31c8fae01b867fc95169843600294801-9e6b9deb9c34f4996616984360888310-640-0.webp" alt="clippers"></a>        
           <a target="_blank" href="./pages/productos.html#patilleras"> <img src="img/skyline-con-baes1-306393cfd36e51577016387985365948-640-0.webp" alt=""></a>
