--- a/pages/pf.html
+++ b/pages/pf.html
@@ -45,7 +45,7 @@
         <div class="main">
             <main>
                 <div>
-                    <img class="slide-m" src="../img/preguntas-frecuentes.png" alt="pf">
+                    <img class="slide-img" src="../img/preguntas-frecuentes.png" alt="pf">
                 </div>
                 <div>
                     <h3><strong>📦Envíos</strong></h3>
@@ -185,15 +185,9 @@
                         <div class="footittle">
                             <h3>REDES SOCIALES</h3>
                         </div>
-                        <a href="http://www.instagram.com/bwayglobal/">
-                            <p>Seguinos en Instagram</p><i class="fa-brands fa-instagram"></i>
-                        </a>
-                        <a href="http://www.youtube.com/channel/UC9ThSreSrJ57-_fqn9m0m6A">
-                            <p>Seguinos en YouTube</p><i class="fa-brands fa-youtube"></i>
-                        </a>
-                        <a href="http://www.tiktok.com/@bwayglobal">
-                            <p>Seguinos en TikTok</p><i class="fa-brands fa-tiktok"></i>
-                        </a>
+                        <a href="http://www.instagram.com/bwayglobal/"><i class="fa-brands fa-instagram"></i><p>Seguinos en Instagram</p></a>
+                        <a href="http://www.youtube.com/channel/UC9ThSreSrJ57-_fqn9m0m6A"><i class="fa-brands fa-youtube"></i><p>Seguinos en YouTube</p> </a>
+                        <a href="http://www.tiktok.com/@bwayglobal"><i class="fa-brands fa-tiktok"></i><p>Seguinos en TikTok</p></a>
                     </div>
                 </div>
                 <div class="Copyright">
