--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -45,11 +45,12 @@
         <div class="main">
             <main>
                 <div>
-                    <img class="slide-m"
+                    <img class="slide-img"
                         src="../img/1-img-1834707464-1658416616-adcceae32df885c94e7e41836f497d531658416617-1024-1024.webp"
                         alt="">
                 </div>
-                <div>
+               <div class="contacto-padre">
+                <div class="contacto-redes">
                     <h3><strong>Nuestras Redes Sociales</strong></h3>
                     <ul>
                         <li><a href="http://www.instagram.com/bwayglobal/"><i
@@ -59,7 +60,9 @@
                         <li><a href="http://www.tiktok.com/@bwayglobal"></a><i class="fa-brands fa-tiktok"></i>Siguenos
                             en TikTok</li>
                     </ul>
-                    <h3>Envianos un mail</h3>
+                </div>
+                    <div>
+                        <h3><strong>Envianos un mail</strong> </h3>
                     <form action="">
 
                         <label for="nombres">Nombres</label>
@@ -75,6 +78,7 @@
                             <br><button type="submit">Enviar</button>
                     </form>
                 </div>
+            </div>
             </main>
         </div>
         <footer class="border-p">
@@ -138,14 +142,14 @@
                             <h3>REDES SOCIALES</h3>
                         </div>
                         <a href="http://www.instagram.com/bwayglobal/">
-                            <p>Seguinos en Instagram</p><i class="fa-brands fa-instagram"></i>
-                        </a>
+                            <i class="fa-brands fa-instagram"></i>
+                            <p>Seguinos en Instagram</p> </a>
                         <a href="http://www.youtube.com/channel/UC9ThSreSrJ57-_fqn9m0m6A">
-                            <p>Seguinos en YouTube</p><i class="fa-brands fa-youtube"></i>
-                        </a>
+                           <i class="fa-brands fa-youtube"></i>
+                           <p>Seguinos en YouTube</p> </a>
                         <a href="http://www.tiktok.com/@bwayglobal">
-                            <p>Seguinos en TikTok</p><i class="fa-brands fa-tiktok"></i>
-                        </a>
+                            <i class="fa-brands fa-tiktok"></i>
+                            <p>Seguinos en TikTok</p> </a>
                     </div>
                 </div>
                 <div class="Copyright">
