--- a/pages/marca.html
+++ b/pages/marca.html
@@ -135,14 +135,10 @@
                             <h3>REDES SOCIALES</h3>
                         </div>
                         <a href="http://www.instagram.com/bwayglobal/">
-                            <p>Seguinos en Instagram</p><i class="fa-brands fa-instagram"></i>
-                        </a>
+                            <i class="fa-brands fa-instagram"></i><p>Seguinos en Instagram</p></a>
                         <a href="http://www.youtube.com/channel/UC9ThSreSrJ57-_fqn9m0m6A">
-                            <p>Seguinos en YouTube</p><i class="fa-brands fa-youtube"></i>
-                        </a>
-                        <a href="http://www.tiktok.com/@bwayglobal">
-                            <p>Seguinos en TikTok</p><i class="fa-brands fa-tiktok"></i>
-                        </a>
+                           <i class="fa-brands fa-youtube"></i><p>Seguinos en YouTube</p> </a>
+                        <a href="http://www.tiktok.com/@bwayglobal"><i class="fa-brands fa-tiktok"></i><p>Seguinos en TikTok</p></a>
                     </div>
                 </div>
                 <div class="Copyright">
