--- a/pages/productos.html
+++ b/pages/productos.html
@@ -64,13 +64,7 @@
                         <li>CUCHILLA: Cuchilla fija de acero de alto carbono. Cuchilla móvil escalonada de cerámica.
                         </li>
                         <li>ALTURA: Con palanca de ajuste de altura. Múltiples cortes.</li>
-                        <li>MOVILIDAD: Inalámbrica, para uso con o sin cable.</li>
-                        <li>ENSIÓN: 5V - (USB)</li>
-                        <li>MEDIDAS DE CAJA: 23x20,8x6,5cm</li>
-                        <li>CÓD. PRODUCTO: BW1FASTER</li>
-                        <li>EAN: 7798356150489</li>
-                        <li>ORIGEN: China</li>
-                        <p>¿Que contiene el producto?</p>
+                        <li><p>¿Que contiene el producto?</p></li>
                         <li>Clipper profesional.</li>
                         <li>6 peines guía transparentes (1.5 mm/ 3mm/ 4.5mm/ 6mm/ 10mm/ 13mm)</li>
                         <li>Aceite lubricante</li>
@@ -95,27 +89,7 @@
                         240´, en sólo 3-4hs de carga completa. Indicador led de carga. Este set de 11 piezas incluye:
                         Cortadora, 6 peines guía premium (1,5mm, 3mm, 4,5mm, 6mm, 10mm, 13mm), aceite lubricante,
                         cepillo de limpieza, cobertor de cuchilla, cargador.</p>
-                    <ul>
-                        <li>TIPO: Cortadora inalámbrica de uso profesional</li>
-                        <li>CUCHILLA: Exclusiva superior con dientes alternados</li>
-                        <li>ALTURA: Con palanca de ajuste de altura. 0.8 a 2mm</li>
-                        <li>MOVILIDAD: Uso con o sin cable</li>
-                        <li>TENSIÓN: 100-240V ~ 50/60Hz</li>
-                        <li>BATERÍA: Iones de litio 240´de uso - 3-4hs de carga completa</li>
-                        <li>PESO: 375gr (sin cable)</li>
-                        <li>LED DE CARGA: Si</li>
-                        <li>MEDIDAS DE LA CAJA: 15,8x23,9x8cm</li>
-                        <li>COD. PROD: BW12020A</li>
-                        <li>EAN: 7798356150090</li>
-                        <li>ORIGEN: China</li>
-                        <p>¿Que contiene el producto?</p>
-                        <li>Box Packaging</li>
-                        <li>Corta Pelo y Barba - Steel Clip</li>
-                        <li>6 peines guía premium</li>
-                        <li>Cepillo de limpieza, protector de cuchilla, aceite lubricante</li>
-                        <li>Cargador</li>
-                        <li>Manual de usuario</li>
-                    </ul>
+                   
                 </div>
                 <div>
                     <img src="../img/31-0f4b0567f6d063641b16741332143876-640-0.webp" alt="">
