--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
         <div class="vitext">
           <h3>NUESTRA VISION</h3>
           <p>En B-WAY somos un equipo de profesionales dedicados durante aÃ±os a la belleza y el cuidado personal
-            brindando herramientas de alta calidad y tecnologÃ­a a profesionales de la industria. Con el tiempo
+            brindando herramientas de alta calidad y tecnologia a profesionales de la industria. Con el tiempo
             comprendimos y adaptamos las necesidades de nuestros clientes para lograr instrumentos de belleza con
-            prestaciones de altÃ­sima calidad. Nuestra visiÃ³n pone a disposiciÃ³n de profesionales, estilistas y
+            prestaciones de altisima calidad. Nuestra visiÃ³n pone a disposiciÃ³n de profesionales, estilistas y
             usuarios domÃ©sticos productos de alta performance, aquellos que fueron el resultado de investigaciÃ³n y
-            desarrollo de tecnologÃ­as aplicadas pensadas para el uso mas exigente.</p>
+            desarrollo de tecnologias aplicadas pensadas para el uso mas exigente.</p>
           <div class="conocer-mas">
             <a href="./pages/marca.html">Conocer mas</a>
 
