--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
       </div>
       <div class="slogan-1">
         <h3><strong>POTENCIAMOS TU TALENTO</strong></h3>
-        <p>Nuestra tecnologia en los motores de aplicacion AMT (Application Motor Technology) dan garantia en el uso
-          de nuestros materiales y brindan una performance de excelencia.</p>
+        <p>Nuestra tecnología en los motores de aplicación AMT (Application Motor Technology) dan garantía en el uso de nuestros materiales y brindan una performance de excelencia.
+
+        </p>
       </div>
       <div class="maquinas4">
         <img src="img/california-01-01-d31c8fae01b867fc95169843600294801-9e6b9deb9c34f4996616984360888310-640-0.webp"
@@ -87,25 +88,19 @@
         <img class="vision-img"src="img/1-img-255438483-1658241737-f76c5d0186eefe3ff238f8da993db7201658241737-640-0.webp" alt="">
         <div class="vitext">
           <h3>NUESTRA VISION</h3>
-          <p>En B-WAY somos un equipo de profesionales dedicados durante aÃ±os a la belleza y el cuidado personal
-            brindando herramientas de alta calidad y tecnologia a profesionales de la industria. Con el tiempo
-            comprendimos y adaptamos las necesidades de nuestros clientes para lograr instrumentos de belleza con
-            prestaciones de altisima calidad. Nuestra visiÃ³n pone a disposiciÃ³n de profesionales, estilistas y
-            usuarios domÃ©sticos productos de alta performance, aquellos que fueron el resultado de investigaciÃ³n y
-            desarrollo de tecnologias aplicadas pensadas para el uso mas exigente.</p>
+          <p>En B-WAY somos un equipo de profesionales dedicados durante años a la belleza y el cuidado personal brindando herramientas de alta calidad y tecnología a profesionales de la industria. Con el tiempo comprendimos y adaptamos las necesidades de nuestros clientes para lograr instrumentos de belleza con prestaciones de altísima calidad. Nuestra visión pone a disposición de profesionales, estilistas y usuarios domésticos productos de alta performance,
+             aquellos que fueron el resultado de investigación y desarrollo de tecnologías aplicadas pensadas para el uso mas exigente.
+            </p>
           <div class="conocer-mas">
-            <a href="./pages/marca.html">Conocer mas</a>
+            <a href="./pages/marca.html">CONOCER MAS</a>
 
           </div>
         </div>
       </div>
      <div>
-      <img class="slide-img" src="img/1-img-1456941493-1698606969-f498b48ab98d2140b401e45a0e351ad01698606970-1920-1920.webp"
+      <img class="slide-img" src="img/slide-foot.webp"
         alt="">
-      <iframe class="video" src="https://www.youtube.com/embed/iWu50YyH5jw?si=ohU-e59U7pFoxRYw"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen></iframe>
+        <iframe class="video" src="https://www.youtube.com/embed/zoQ_280NFCs?si=UVFLiHLaaEONQhuE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
       <div class="ig-padre">
         <div class="igini">
