--- a/pages/marca.html
+++ b/pages/marca.html
@@ -15,33 +15,33 @@
 </head>
 
 <body>
-    <section class="marca">
-        <div class="header">
-            <header>
-                <div class="navbar">
-                    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                      <div class="navini">
-                        <a class="logo" href="#"><img
+
+    <header>
+        <div class="navbar">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="navini">
+                    <a class="logo" href="../index.html"><img
                             src="../img/logo-1422723955-1631825534-b61290eb4e0cdf1d42cd790958d2d9e31631825534-480-0.webp"
                             alt="logo"></a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                          <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                          <div class="navbar-nav">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
                             <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                             <a class="nav-link" href="./marca.html">Marca</a>
                             <a class="nav-link" href="./productos.html">Productos</a>
                             <a class="nav-link" href="./pf.html">Preguntas Frecuentes</a>
                             <a class="nav-link" href="./contacto.html">Contacto</a>
-                          </div>
                         </div>
-                      </div>
-                    </nav>
-                  </div>
-            </header>
+                    </div>
+                </div>
+            </nav>
         </div>
+    </header>
+    <section class="marca">
         <div class="main">
             <main>
                 <div>
@@ -69,87 +69,92 @@
                         aplicación (AMT application motor technology) dan garantía en el uso de nuestros materiales.
                     </p>
                 </div>
-                <div>
+                <div id="slide_m">
                     <img class="slide-img" src="../img/about1.jpg" alt="ACERCA-DE-NOSOTROS">
                 </div>
             </main>
         </div>
-        <footer class="border-p">
-            <div class="padre">
-                <div class="conteiner">
-                    <div class="footittle">
-                        <nav>
-                            <h3>NAVEGACION</h3>
-                            <ul class="footnav">
-                                <li><a target="_blank" href="../index.html">INICIO</a></li>
-                                <li><a target="_blank" href="./pages/contacto.html">CONTACTO</a></li>
-                                <li><a target="_blank" href="./pages/marca.html">MARCA</a></li>
-                                <li><a target="_blank" href="./pages/encontranos.html">PREGUNTAS FRECUENTES</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="footpago">
-                        <div class="footittle">
-                            <h3>MEDIOS DE PAGO</h3>
-                        </div>
-                        <div class="img-t">
-                            <img src="../img/visa@2x.png" alt="visa"><img src="../img/mastercard@2x.png"
-                                alt="mastercard"><img src="../img/amex@2x.png" alt="american xpress"><img
-                                src="../img/diners@2x.png" alt="diners"><img src="../img/banelco@2x.png"
-                                alt="banelco"><img src="../img/cabal@2x.png" alt="cabal">
-                            <img src="../img/tarjeta-naranja@2x.png" alt="nrj"><img src="../img/tarjeta-shopping@2x.png"
-                                alt=""><img src="../img/mercadopago@2x.png" alt="mp"><img src="../img/other@2x.png"
-                                alt="other"><img src="../img/argencard@2x.png" alt="argc"><img
-                                src="../img/cencosud@2x.png" alt="cencosud"><img src="../img/pagofacil@2x.png"
-                                alt="pagofacil"><img src="../img/rapipago@2x.png" alt="rapipago">
-                            <img src="../img/nativa@2x.png" alt="nativa"><img src="../img/cabaldebit@2x.png"
-                                alt="cabald"><img src="../img/visadebit@2x.png" alt="visadebit"><img
-                                src="../img/maestro@2x.png" alt="maestro">
-                        </div>
-                    </div>
-                    <div class="footenv">
-                        <div class="footittle">
-                            <h3>FORMAS DE ENVIO</h3>
-                        </div>
-                        <img src="../img/correo-argentino@2x.png" alt="correo-argentino">
-                    </div>
-                    <div class="footcontact">
-                        <div class="footittle">
-                            <h3>CONTACTANOS</h3>
-                        </div>
-                        <div class="contacto">
-                            <i class="fa-solid fa-phone"></i>
-                            <p>+5491138457509</p>
-                        </div>
-                        <div class="contacto">
-                            <a href="../pages/contacto.html"><i class="fa-regular fa-envelope"></i>hola@bway.com.ar</a>
-                        </div>
-                        <div class="contacto">
-                            <i class="fa-solid fa-map-pin"></i>
-                            <p>Av. Libertador 218</p>
-                        </div>
-                    </div>
 
-                    <div class="footsocial">
-                        <div class="footittle">
-                            <h3>REDES SOCIALES</h3>
-                        </div>
-                        <a href="http://www.instagram.com/bwayglobal/">
-                            <i class="fa-brands fa-instagram"></i><p>Seguinos en Instagram</p></a>
-                        <a href="http://www.youtube.com/channel/UC9ThSreSrJ57-_fqn9m0m6A">
-                           <i class="fa-brands fa-youtube"></i><p>Seguinos en YouTube</p> </a>
-                        <a href="http://www.tiktok.com/@bwayglobal"><i class="fa-brands fa-tiktok"></i><p>Seguinos en TikTok</p></a>
+    </section>
+    <footer class="border-p">
+        <div class="padre">
+            <div class="conteiner">
+                <div class="footittle">
+                    <nav>
+                        <h3>NAVEGACION</h3>
+                        <ul class="footnav">
+                            <li><a target="_blank" href="../index.html">INICIO</a></li>
+                            <li><a target="_blank" href="./pages/contacto.html">CONTACTO</a></li>
+                            <li><a target="_blank" href="./pages/marca.html">MARCA</a></li>
+                            <li><a target="_blank" href="./pages/encontranos.html">PREGUNTAS FRECUENTES</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="footpago">
+                    <div class="footittle">
+                        <h3>MEDIOS DE PAGO</h3>
+                    </div>
+                    <div class="img-t">
+                        <img src="../img/visa@2x.png" alt="visa"><img src="../img/mastercard@2x.png"
+                            alt="mastercard"><img src="../img/amex@2x.png" alt="american xpress"><img
+                            src="../img/diners@2x.png" alt="diners"><img src="../img/banelco@2x.png" alt="banelco"><img
+                            src="../img/cabal@2x.png" alt="cabal">
+                        <img src="../img/tarjeta-naranja@2x.png" alt="nrj"><img src="../img/tarjeta-shopping@2x.png"
+                            alt=""><img src="../img/mercadopago@2x.png" alt="mp"><img src="../img/other@2x.png"
+                            alt="other"><img src="../img/argencard@2x.png" alt="argc"><img src="../img/cencosud@2x.png"
+                            alt="cencosud"><img src="../img/pagofacil@2x.png" alt="pagofacil"><img
+                            src="../img/rapipago@2x.png" alt="rapipago">
+                        <img src="../img/nativa@2x.png" alt="nativa"><img src="../img/cabaldebit@2x.png"
+                            alt="cabald"><img src="../img/visadebit@2x.png" alt="visadebit"><img
+                            src="../img/maestro@2x.png" alt="maestro">
                     </div>
                 </div>
-                <div class="Copyright">
-                    <p>Copyright BWAY - 2023. Todos los derechos reservados. </p>
+                <div class="footenv">
+                    <div class="footittle">
+                        <h3>FORMAS DE ENVIO</h3>
+                    </div>
+                    <img src="../img/correo-argentino@2x.png" alt="correo-argentino">
+                </div>
+                <div class="footcontact">
+                    <div class="footittle">
+                        <h3>CONTACTANOS</h3>
+                    </div>
+                    <div class="contacto">
+                        <i class="fa-solid fa-phone"></i>
+                        <p>+5491138457509</p>
+                    </div>
+                    <div class="contacto">
+                        <a href="../pages/contacto.html"><i class="fa-regular fa-envelope"></i>hola@bway.com.ar</a>
+                    </div>
+                    <div class="contacto">
+                        <i class="fa-solid fa-map-pin"></i>
+                        <p>Av. Libertador 218</p>
+                    </div>
+                </div>
+
+                <div class="footsocial">
+                    <div class="footittle">
+                        <h3>REDES SOCIALES</h3>
+                    </div>
+                    <a href="http://www.instagram.com/bwayglobal/">
+                        <i class="fa-brands fa-instagram"></i>
+                        <p>Seguinos en Instagram</p>
+                    </a>
+                    <a href="http://www.youtube.com/channel/UC9ThSreSrJ57-_fqn9m0m6A">
+                        <i class="fa-brands fa-youtube"></i>
+                        <p>Seguinos en YouTube</p>
+                    </a>
+                    <a href="http://www.tiktok.com/@bwayglobal"><i class="fa-brands fa-tiktok"></i>
+                        <p>Seguinos en TikTok</p>
+                    </a>
                 </div>
             </div>
+            <div class="Copyright">
+                <p>Copyright BWAY - 2023. Todos los derechos reservados. </p>
+            </div>
+        </div>
 
-        </footer>
-    </section>
-
-
+    </footer>
 
 
 
