--- a/pages/productos.html
+++ b/pages/productos.html
@@ -20,7 +20,7 @@
             <div class="navbar">
                 <nav class="navbar navbar-expand-lg bg-body-tertiary">
                   <div class="navini">
-                    <a class="logo" href="#"><img
+                    <a class="logo" href="../index.html"><img
                         src="../img/logo-1422723955-1631825534-b61290eb4e0cdf1d42cd790958d2d9e31631825534-480-0.webp"
                         alt="logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -50,10 +50,10 @@
             </div>
             <section class="cortadoras">
                 <div>
-                    <img src="../img/faster-ficha_mesa-de-trabajo-11-c665aa6ae53a1bbc1516397530354795-480-0.webp"
+                    <img src="../img/faster-caja-frente1-0e484905ee7e0265a416397530359129-480-0.webp"
                         alt="faster">
                 </div>
-                <div>
+                <div class="text">
                     <h3><strong>FASTER CORTADORA PROFESIONAL</strong></h3>
                     <p>-Clipper profesional inalámbrico para uso con y sin cable, incluye cable USB. Alcanza 7800 rpm y
                         cuenta con 12W de potencia. Gracias a su batería de iones de litio de 2200mAh, permite obtener
@@ -75,10 +75,10 @@
                     </ul>
                 </div>
                 <div>
-                    <img src="../img/steel-clip-ficha3_mesa-de-trabajo-11-950a241b697bb9edb316388099680889-640-0.webp"
+                    <img src="../img/steel-clip-caja-frente1-fefcf61f5492aa4cc316387994151813-640-0.webp"
                         alt="steel-clip">
                 </div>
-                <div>
+                <div class="text">
                     <h3><strong>STEEL CLIP CORTADORA PROFESIONAL</strong></h3>
                     <h4><strong>ALTURA DE CORTE 0.8-2MM</strong></h4>
                     <p>- Cortadora profesional inalámbrica, para uso con o sin cable. Alcanza 5800rpm y 8-10W de
@@ -92,9 +92,9 @@
                    
                 </div>
                 <div>
-                    <img src="../img/31-0f4b0567f6d063641b16741332143876-640-0.webp" alt="">
+                    <img src="../img/malibu-caja-frente.webp" alt="">
                 </div>
-                <div>
+                <div class="text">
                     <h3><strong>MALIBU CORTA CABELLOS INALÁMBRICA</strong></h3>
                     <p><strong>Malibu cordless clipper:</strong>Cortadora profesional inalámbrica para uso con o sin
                         cable, que alcanza 6500rpm y 12W de potencia. Su cuchilla fija especial WEDGE DLC (de grafito y
@@ -119,9 +119,9 @@
                     </ul>
                 </div>
                 <div>
-                    <img src="../img/california-03-01-4def24468c49adc1af16984360100528-640-0.webp" alt="california">
+                    <img src="../img/california-caja-frente.webp" alt="california">
                 </div>
-                <div>
+                <div class="text">
                     <h3><strong>CALIFORNIA</strong></h3>
                     <p>Máquina profesional inalámbrico, con 8000 rpm y 12W de potencia. Su hoja FAPER FUSION DLC, plana
                         y ranurada con material Diamond Like Carbon 2.0 especial para robustecer su dureza y reducir al
@@ -150,9 +150,9 @@
             </div>
             <section class="cortadoras">
                 <div>
-                    <img src="../img/one_1000x1000-011-1cb6a53869d63870e716576532130709-640-0.webp" alt="trimmer-one">
+                    <img src="../img/trimmer-one-caja-frente.webp" alt="trimmer-one">
                 </div>
-                <div>
+                <div class="text">
                     <h3><strong>TRIMMER ONE </strong></h3>
                     <p>Trimmer profesional inalámbrico, que alcanza 6000 rpm y 5W de potencia. Incluye cable USB para la
                         carga de su batería Li-Ion de 1400 mAh, permitiendo obtener hasta 180' de uso continuo, con 2 hs
@@ -167,10 +167,10 @@
                     </ul>
                 </div>
                 <div>
-                    <img src="../img/skyline-ficha2_mesa-de-trabajo-11-0136a060665dcdb91816388011251116-640-0.webp"
+                    <img src="../img/skyline-caja-frente.webp"
                         alt="trimmer-skyline">
                 </div>
-                <div>
+                <div class="text">
                     <h3><strong>TRIMMER PROFESIONAL CORD-CORDLESS</strong></h3>
                     <ul>
                         <li>Con 4 velocidades regulables digitalmente: 5500 – 6000 – 6500 - 7000 rpm.</li>
@@ -184,10 +184,10 @@
                     </ul>
                 </div>
                 <div>
-                    <img src="../img/steel-trimmer-ficha1-ddfdddc97a2ecd8b4716789790972693-640-0.webp"
+                    <img src="../img/steelline-caja-frentte.webp"
                         alt="trimmer-steel">
                 </div>
-                <div>
+                <div class="text">
                     <h3><strong>STEEL LINE TRIMMER</strong></h3>
                     <p>Patillera profesional inalámbrica, con cuchilla especial en T de grafito 2.0& 5CR13 que alcanza
                         7500 rpm. Permite cortar a tan solo 0.1 mm, ideal para cortar volumen con cortes súper al ras.
@@ -214,10 +214,10 @@
             </div>
             <section class="cortadoras">
                 <div>
-                    <img src="../img/steel-foil-ficha_mesa-de-trabajo-11-7845f4ebdb0f09958d16789788521221-640-0.webp"
+                    <img src="../img/steel-foil-caja.webp"
                         alt="shaver-sf">
                 </div>
-                <div>
+                <div class="text">
                     <h3><strong>STEEL FOIL SHAVER</strong></h3>
                     <p>Afeitadora profesional inalámbrica para uso en salon. Cuchillas tipo crunch de titanio, cuenta
                         con un motor regulable de 7000, 6500, 5500, 5000 rpm, con display LED con indicador de
@@ -230,7 +230,7 @@
                     <img src="../img/finisher-mesa-de-trabajo-1_3-1001-22912a8db836741a9516747547255995-640-0.webp"
                         alt="shaver-finisher">
                 </div>
-                <div>
+                <div class="text">
                     <h3><strong>FINISHER PROFESSIONAL SHAVER</strong></h3>
                     <p>Afeitadora profesional inalámbrica para salón o barbería, como también para uso y cuidado
                         personal, con potente motor que alcanza 8800 rpm. Ideal para contornos, finalizaciones y
@@ -250,9 +250,9 @@
                     </ul>
                 </div>
                 <div>
-                    <img src="../img/zero_1000x1000-021-d4179968a22d483cd216576524098229-640-0.webp" alt="trimmer-zero">
+                    <img src="../img/zero-shaver-caja.webp" alt="trimmer-zero">
                 </div>
-                <div>
+                <div class="text">
                     <h3><strong>ZERO SHAVER</strong></h3>
                     <p>Afeitadora profesional inalámbrica para uso en salón y para el cuidado personal, con potente
                         motor que alcanza 7000 rpm. Ideal para contornos, finalizaciones y barbería. Permite cortar a
