--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="navbar">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="navini">
-            <a class="logo" href="#"><img
+            <a class="logo" href="./index.html"><img
                 src="./img/logo-1422723955-1631825534-b61290eb4e0cdf1d42cd790958d2d9e31631825534-480-0.webp"
                 alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
