--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -47,7 +47,7 @@
             <main>
                 <div>
                     <img class="slide-img"
-                        src="../img/1-img-1834707464-1658416616-adcceae32df885c94e7e41836f497d531658416617-1024-1024.webp"
+                        src="../img/slide-contacto-new.webp"
                         alt="">
                 </div>
                 <div class="contacto-padre">
