--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
       </div>
       <div class="maquinas4">
         <img src="img/california-01-01-d31c8fae01b867fc95169843600294801-9e6b9deb9c34f4996616984360888310-640-0.webp"
-          alt="">
-        <img src="img/five_1000x1000-071-a3a5b6ce22f293760f16576522420074-640-0.webp" alt="">
+          alt="california-clipper">
+        <img src="img/five_1000x1000-071-a3a5b6ce22f293760f16576522420074-640-0.webp" alt="five-clipper">
         <img src="img/faster1-7b1da17b62e7334c5016397530356566-480-0.webp" alt="faster">
-        <img src="img/skull-sola1-51e460c8cda7b4d4b816387992065364-640-0.webp" alt="">
+        <img src="img/skull-sola1-51e460c8cda7b4d4b816387992065364-640-0.webp" alt="skull-clipper">
       </div>
     </section>
     <section id="vision" class="border">
       <div class="visionini">
-        <img class="vision-img"src="img/1-img-255438483-1658241737-f76c5d0186eefe3ff238f8da993db7201658241737-640-0.webp" alt="">
+        <img class="vision-img"src="img/vision-img.webp" alt="vision-img">
         <div class="vitext">
           <h3>NUESTRA VISION</h3>
           <p>En B-WAY somos un equipo de profesionales dedicados durante años a la belleza y el cuidado personal brindando herramientas de alta calidad y tecnología a profesionales de la industria. Con el tiempo comprendimos y adaptamos las necesidades de nuestros clientes para lograr instrumentos de belleza con prestaciones de altísima calidad. Nuestra visión pone a disposición de profesionales, estilistas y usuarios domésticos productos de alta performance,
@@ -99,7 +99,7 @@
       </div>
      <div>
       <img class="slide-img" src="img/slide-foot.webp"
-        alt="">
+        alt="slide-foot">
         <iframe class="video" src="https://www.youtube.com/embed/zoQ_280NFCs?si=UVFLiHLaaEONQhuE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
       <div class="ig-padre">
