--- a/pages/pf.html
+++ b/pages/pf.html
@@ -46,7 +46,7 @@
         <div class="main">
             <main>
                 <div>
-                    <img class="slide-img" src="../img/preguntas-frecuentes.png" alt="pf">
+                    <img class="slide-img" src="../img/preguntas-frecuentes.png" alt="pf-slide">
                 </div>
                 <div class="conteiner_pf">
                     <h3><strong>📦Envíos</strong></h3>
